<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>