...
            android:text="@string/steps"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_gravity="center" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
