...
        cardview:cardCornerRadius="20dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/sepv_step_detail_fragment_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_margin="8dp" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
...
